[package]
name = "json-mutex-db"
version = "0.0.2"
edition = "2024"
authors = [ "Georgii Plotnikov<georgii@inferara.com>" ]
description = "Ridiculously simple, fast and thread safe JSON file database"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.4"
crossbeam-channel = "0.5.15"
simd-json = "0.15.1"
tempfile = "3.20.0"

